--- a/index.html
+++ b/index.html
@@ -5,34 +5,171 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Intro to Coding</title>
+
   <!-- CSS Stylesheet -->
   <link rel="stylesheet" href="style.css">
+
   <!-- Bootstrap Stylesheet -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
+
 <body>
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="#">LOGO</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-          <a class="nav-link" href="#">Features</a>
-          <a class="nav-link" href="#">Pricing</a>
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+          <a class="nav-link active" aria-current="page" href="#">Home (current)</a>
+          <a class="nav-link" href="#css-grid">How it works (using CSS Grid)</a>
+          <a class="nav-link" href="#flexbox">How it works (using Flexbox)</a>
+          <a class="nav-link" href="#products">Our Products</a>
+          <a class="nav-link" href="#footer">Sign Up</a>
         </div>
       </div>
     </div>
   </nav>
 
-  <!-- Bootstrap Script tag -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+  <!-- Banner -->
+  <div class="banner">
+    <div class="container">
+      <h1>Brighton Bulk Store</h1>
+      <p>Plastic-free, quality, local, organic and sustainable products</p>
+      <a href="#products" class="button">View our products</a>
+    </div>
+  </div>
+
+  <!-- How it works: Using CSS Grid -->
+  <div class="container" id="css-grid">
+    <h2>How it works (using CSS Grid)</h2>
+    <div class="grid-cards">
+      <div class="card">
+        <img src="images/scoops-icon.svg" alt="Scoops icon" class="icon">
+        <h3>1. Scoop</h3>
+        <p>Scoop and fill as little or as much as you’d like!</p>
+      </div>
+      <div class="card">
+        <img src="images/label-icon.svg" alt="Label icon" class="icon">
+        <h3>2. Label</h3>
+        <p>Label your bag or container with the product code</p>
+      </div>
+      <div class="card">
+        <img src="images/weigh-icon.svg" alt="Weigh icon" class="icon">
+        <h3>3. Weigh</h3>
+        <p>We’ll weight your items and you pay per volume</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- How it works: Using CSS Flexbox -->
+  <div class="container" id="flexbox">
+    <h2>How it works (using Flexbox)</h2>
+    <div class="d-flex justify-content-around flex-wrap">
+      <div class="card flex-card">
+        <img src="images/scoops-icon.svg" alt="Scoops icon" class="icon">
+        <h3>1. Scoop</h3>
+        <p>Scoop and fill as little or as much as you’d like!</p>
+      </div>
+      <div class="card flex-card">
+        <img src="images/label-icon.svg" alt="Label icon" class="icon">
+        <h3>2. Label</h3>
+        <p>Label your bag or container with the product code</p>
+      </div>
+      <div class="card flex-card">
+        <img src="images/weigh-icon.svg" alt="Weigh icon" class="icon">
+        <h3>3. Weigh</h3>
+        <p>We’ll weight your items and you pay per volume</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Carousel -->
+  <div class="container" id="products">
+    <h2>Our Products</h2>
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="images/nuts.jpg" alt="First slide">
+          <div class="carousel-caption d-none d-md-block">
+            <h3 class="carousel-title">Nuts and grains</h3>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="images/fresh-produce.jpg" alt="Second slide">
+          <div class="carousel-caption d-none d-md-block">
+            <h3 class="carousel-title">Fresh Produce</h3>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="images/spices.jpg" alt="Third slide">
+          <div class="carousel-caption d-none d-md-block">
+            <h3 class="carousel-title">Tea and Spices</h3>
+          </div>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div>
+
+  <!-- Footer -->
+  <div class="footer" id="footer">
+    <h2>Stay in the loop!</h2>
+    <!-- Form -->
+    <form>
+      <div class="form-group">
+        <label for="nameInput">Name</label>
+        <input type="text" class="form-control" id="nameInput">
+      </div>
+      <div class="form-group">
+        <label for="emailInput">Email address</label>
+        <input type="email" class="form-control" id="emailInput">
+      </div>
+      <div class="form-group">
+        <label for="messageInput">Message (Optional)</label>
+        <textarea class="form-control" id="messageInput" rows="3"></textarea>
+      </div>
+      <a type="submit" class="button">Submit</a>
+    </form>
+    <!-- Social icons -->
+    <ul>
+      <li>
+        <img src="images/facebook-logo.svg" alt="Facebook logo" class="social-logo">
+      </li>
+      <li>
+        <img src="images/instagram-logo.svg" alt="Instagram logo" class="social-logo">
+      </li>
+      <li>
+        <img src="images/pinterest-logo.svg" alt="Pinterest logo" class="social-logo">
+      </li>
+    </ul>
+  </div>
+
+  <!-- Bootstrap Script tags -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
 
