--- a/example-bulk-store/index.html
+++ b/example-bulk-store/index.html
@@ -17,7 +17,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body></body>
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
@@ -148,7 +148,7 @@
         <label for="messageInput">Message (Optional)</label>
         <textarea class="form-control" id="messageInput" rows="3"></textarea>
       </div>
-      <a type="submit" class="button">Submit</a>
+      <a type="submit" class="button form-button">Submit</a>
     </form>
     <!-- Social icons -->
     <ul>
