Fixed button alignment

--- a/example-bulk-store/index.html
+++ b/example-bulk-store/index.html
@@ -148,7 +148,7 @@
         <label for="messageInput">Message (Optional)</label>
         <textarea class="form-control" id="messageInput" rows="3"></textarea>
       </div>
-      <a type="submit" class="button">Submit</a>
+      <a type="submit" class="button form-button">Submit</a>
     </form>
     <!-- Social icons -->
     <ul>
