Fixed social icons

--- a/example-bulk-store/index.html
+++ b/example-bulk-store/index.html
@@ -151,17 +151,17 @@
       <a type="submit" class="button form-button">Submit</a>
     </form>
     <!-- Social icons -->
-    <ul>
-      <li>
+    <div class="social-logos">
+      <a href="#">
         <img src="images/facebook-logo.svg" alt="Facebook logo" class="social-logo">
-      </li>
-      <li>
+      </a>
+      <a href="#">
         <img src="images/instagram-logo.svg" alt="Instagram logo" class="social-logo">
-      </li>
-      <li>
+      </a>
+      <a href="#">
         <img src="images/pinterest-logo.svg" alt="Pinterest logo" class="social-logo">
-      </li>
-    </ul>
+      </a>
+    </div>
   </div>
 
   <!-- Bootstrap Script tags -->
